Add minor change to white_all API integration test

--- a/api/test/integration/test_rbac_white_all_endpoints.tavern.yaml
+++ b/api/test/integration/test_rbac_white_all_endpoints.tavern.yaml
@@ -1958,11 +1958,16 @@ stages:
           groups: []
           agent_os: []
           agent_status:
-            active: 0
-            disconnected: 0
-            never_connected: 0
-            pending: 0
-            total: 0
+            connection:
+              active: 0
+              disconnected: 0
+              never_connected: 0
+              pending: 0
+              total: 0
+            configuration:
+              synced: 0
+              total: 0
+              not_synced: 0
           agent_version: []
           last_registered_agent: []
         error: 0
