Add requested changes and new API integration tests

--- a/api/api/spec/spec.yaml
+++ b/api/api/spec/spec.yaml
@@ -4591,7 +4591,7 @@ components:
       description: "Filter by agents version"
       schema:
         type: string
-        format: wazuh_version
+        format: alphanumeric
     cve_version:
       in: query
       name: version
