--- a/api/test/integration/test_agent_GET_endpoints.tavern.yaml
+++ b/api/test/integration/test_agent_GET_endpoints.tavern.yaml
@@ -309,13 +309,13 @@ stages:
       json:
         <<: *error_spec
 
-  - name: Filter by agent version
+  - name: Filter by agent version following the 'wazuh vX.Y.Z' format
     request:
       verify: False
       <<: *get_agents
       params:
         version: 'Wazuh v3.9.2'
-    response:
+    response: &old_wazuh_agents_response
       status_code: 200
       json:
         error: !anyint
@@ -327,6 +327,33 @@ stages:
           total_affected_items: 2
           total_failed_items: 0
 
+  - name: Filter by agent version following the 'wazuh X.Y.Z' format
+    request:
+      verify: False
+      <<: *get_agents
+      params:
+        version: 'Wazuh 3.9.2'
+    response:
+      <<: *old_wazuh_agents_response
+
+  - name: Filter by agent version following the 'vX.Y.Z' format
+    request:
+      verify: False
+      <<: *get_agents
+      params:
+        version: 'v3.9.2'
+    response:
+      <<: *old_wazuh_agents_response
+
+  - name: Filter by agent version following the 'X.Y.Z' format
+    request:
+      verify: False
+      <<: *get_agents
+      params:
+        version: '3.9.2'
+    response:
+      <<: *old_wazuh_agents_response
+
   - name: Try to show agents using a non existing version
     request:
       verify: False
@@ -334,9 +361,11 @@ stages:
       params:
         version: 'TestVersion'
     response:
-      status_code: 400
+      status_code: 200
       json:
-        <<: *error_spec
+        error: !anyint
+        data:
+          <<: *affected_empty_answer
 
   - name: Try to show agents using an invalid version
     request:
