--- a/api/test/integration/env/docker-compose.yml
+++ b/api/test/integration/env/docker-compose.yml
@@ -73,6 +73,8 @@ services:
       - nginx-lb
       - wazuh-agent1
     depends_on:
+      - wazuh-worker1
+      - wazuh-worker2
       - nginx-lb
 
   wazuh-agent2:
@@ -92,6 +94,8 @@ services:
       - nginx-lb
       - wazuh-agent2
     depends_on:
+      - wazuh-worker1
+      - wazuh-worker2
       - wazuh-agent1
       - nginx-lb
 
@@ -112,6 +116,8 @@ services:
       - nginx-lb
       - wazuh-agent3
     depends_on:
+      - wazuh-worker1
+      - wazuh-worker2
       - wazuh-agent2
       - nginx-lb
 
@@ -132,6 +138,8 @@ services:
       - nginx-lb
       - wazuh-agent4
     depends_on:
+      - wazuh-worker1
+      - wazuh-worker2
       - wazuh-agent3
       - nginx-lb
 
@@ -153,6 +161,8 @@ services:
       - wazuh-agent5
       - agent_old
     depends_on:
+      - wazuh-worker1
+      - wazuh-worker2
       - wazuh-agent4
       - nginx-lb
 
@@ -174,6 +184,8 @@ services:
       - wazuh-agent6
       - agent_old
     depends_on:
+      - wazuh-worker1
+      - wazuh-worker2
       - wazuh-agent5
       - nginx-lb
 
@@ -195,6 +207,8 @@ services:
       - wazuh-agent7
       - agent_old
     depends_on:
+      - wazuh-worker1
+      - wazuh-worker2
       - wazuh-agent6
       - nginx-lb
 
@@ -216,6 +230,8 @@ services:
       - wazuh-agent8
       - agent_old
     depends_on:
+      - wazuh-worker1
+      - wazuh-worker2
       - wazuh-agent7
       - nginx-lb
 
