Add fixes regarding deprecation header

--- a/api/api/spec/spec.yaml
+++ b/api/api/spec/spec.yaml
@@ -14794,7 +14794,6 @@ paths:
       tags:
         - Security
       summary: "Login"
-      deprecated: true
       description: "This method should be called to get an API token. This token will expire after
       auth_token_exp_timeout seconds (default: 900). This value can be changed using PUT /security/config"
       operationId: api.controllers.security_controller.login_user
@@ -14835,9 +14834,10 @@ paths:
       tags:
         - Security
       summary: "Login"
+      deprecated: true
       description: "This method should be called to get an API token. This token will expire after
       auth_token_exp_timeout seconds (default: 900). This value can be changed using PUT /security/config"
-      operationId: api.controllers.security_controller.login_user
+      operationId: api.controllers.security_controller.login_user_
       parameters:
         - $ref: '#/components/parameters/raw'
       security:
