--- a/framework/wazuh/tests/data/security/rbac_catalog.yml
+++ b/framework/wazuh/tests/data/security/rbac_catalog.yml
@@ -847,6 +847,7 @@ get_rbac_actions:
         related_endpoints:
           - GET /vulnerability/{agent_id}
           - GET /vulnerability/{agent_id}/last_scan
+          - GET /vulnerability/{agent_id}/severity/summary
 
 
 get_rbac_resources:
