Make all processes run as uid 0 and gid 0

--- a/src/Makefile
+++ b/src/Makefile
@@ -2165,7 +2165,7 @@ endif
 
 install_framework: install_python
 	cd ../framework && ${WPYTHON_DIR}/bin/python3 setup.py clean --all install --prefix=${WPYTHON_DIR} --wazuh-version=$(shell cat VERSION) --install-type=${TARGET}
-	chown -R root:${WAZUH_GROUP} ${WPYTHON_DIR}
+	chown -R 0:0 ${WPYTHON_DIR}
 	chmod -R o=- ${WPYTHON_DIR}
 
 install_api: install_python
