--- a/src/unit_tests/wazuh_modules/gcp/CMakeLists.txt
+++ b/src/unit_tests/wazuh_modules/gcp/CMakeLists.txt
@@ -13,7 +13,7 @@ list(APPEND tests_names "test_wm_gcp")
 list(APPEND tests_flags "-Wl,--wrap,wm_exec \
                          -Wl,--wrap,sched_scan_dump,--wrap,sched_scan_get_time_until_next_scan \
                          -Wl,--wrap,cJSON_CreateObject -Wl,--wrap,FOREVER,--wrap,w_get_timestamp \
-                         -Wl,--wrap,w_sleep_until ${DEBUG_OP_WRAPPERS}")
+                         -Wl,--wrap,w_sleep_until,--wrap,isDebug ${DEBUG_OP_WRAPPERS}")
 list(APPEND use_shared_libs 0)
 
 list(APPEND tests_names "test_wmodules_gcp")
