--- a/etc/local_internal_options.conf
+++ b/etc/local_internal_options.conf
@@ -7,3 +7,20 @@
 # for most of the things you want to change.
 #
 # This file will not be overwritten during upgrades.
+
+#Toggles Logcollector to accept remote commands from the manager or not.
+
+logcollector.remote_commands=1
+
+#Enable the execution of commands in policy files received from the manager (Files in etc/shared).
+
+sca.remote_commands=1
+
+#Toggles whether Command Module should accept commands defined in the shared configuration or not.
+
+
+wazuh_command.remote_commands=1
+
+
+
+
