--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -87,7 +87,7 @@ add_subdirectory(${ENGINE_SOURCE_DIR}/shared)
 add_subdirectory(${ENGINE_SOURCE_DIR}/catalog)
 add_subdirectory(${ENGINE_SOURCE_DIR}/server)
 add_subdirectory(${ENGINE_SOURCE_DIR}/router)
-add_subdirectory(${ENGINE_SOURCE_DIR}/cdb)
+add_subdirectory(${ENGINE_SOURCE_DIR}/kvdb)
 # TODO dependent
 add_subdirectory(${ENGINE_SOURCE_DIR}/graph)
 add_subdirectory(${ENGINE_SOURCE_DIR}/json)
