--- a/src/engine/test/CMakeLists.txt
+++ b/src/engine/test/CMakeLists.txt
@@ -32,4 +32,4 @@ add_subdirectory(${TEST_SOURCE_DIR}/graph)
 add_subdirectory(${TEST_SOURCE_DIR}/catalog)
 add_subdirectory(${TEST_SOURCE_DIR}/cliParser)
 add_subdirectory(${TEST_SOURCE_DIR}/shared)
-#add_subdirectory(${TEST_SOURCE_DIR}/cdb)
+add_subdirectory(${TEST_SOURCE_DIR}/kvdb)
