--- a/src/Makefile
+++ b/src/Makefile
@@ -75,6 +75,7 @@ USE_MSGPACK_OPT=yes
 DISABLE_JEMALLOC?=no
 DISABLE_SYSC?=no
 DISABLE_CISCAT?=no
+DISABLE_STRIP_SYMBOLS?=no
 
 ifeq (${TARGET},winagent)
 CMAKE_OPTS=-DCMAKE_SYSTEM_NAME=Windows -DCMAKE_C_COMPILER=${MING_BASE}${CC} -DCMAKE_CXX_COMPILER=${MING_BASE}${CXX}
@@ -572,40 +573,41 @@ failtarget:
 help: failtarget
 	@echo
 	@echo "General options: "
-	@echo "   make V=yes                   Display full compiler messages. Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
-	@echo "   make DEBUG=yes               Build with symbols and without optimization. Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
-	@echo "   make DEBUGAD=yes             Enables extra debugging logging in wazuh-analysisd. Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
-	@echo "   make INSTALLDIR=/path        Wazuh's installation path. Mandatory when compiling the python interpreter from sources using PYTHON_SOURCE."
-	@echo "   make ONEWAY=yes              Disables manager's ACK towards agent. It allows connecting agents without backward connection from manager. Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
-	@echo "   make CLEANFULL=yes           Makes the alert mailing subject clear in the format: '<location> - <level> - <description>'. Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
-	@echo "   make RESOURCES_URL           Set the Wazuh resources URL"
-	@echo "   make EXTERNAL_SRC_ONLY=yes   Combined with 'deps', it downloads only the external source code to be compiled as part of Wazuh building."
-	@echo "   make USE_ZEROMQ=yes          Build with zeromq support. Allowed values are auto, 1, yes, YES, y and Y, otherwise, the flag is ignored"
-	@echo "   make USE_PRELUDE=yes         Build with prelude support. Allowed values are auto, 1, yes, YES, y and Y, otherwise, the flag is ignored"
-	@echo "   make USE_INOTIFY=yes         Build with inotify support. Allowed values are auto, 1, yes, YES, y and Y, otherwise, the flag is ignored"
-	@echo "   make USE_BIG_ENDIAN=yes      Build with big endian support. Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
-	@echo "   make USE_SELINUX=yes         Build with SELinux policies. Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
-	@echo "   make USE_AUDIT=yes           Build with audit service support. Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
-	@echo "   make USE_MSGPACK_OPT=yes     Use default architecture for building msgpack library. Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
-	@echo "   make DISABLE_JEMALLOC=yes     Not to build the JEMalloc library. Allowed values are 1, yes, YES, y, and Y, otherwise, the flag is ignored"
-	@echo "   make OFLAGS=-Ox              Overrides optimization level"
-	@echo "   make DISABLE_SYSC=yes        Not to build the Syscollector module (for unsupported systems). Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
-	@echo "   make DISABLE_CISCAT=yes      Not to build the CIS-CAT module (for unsupported systems). Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
-	@echo "   make OPTIMIZE_CPYTHON=yes    Enable this flag to optimize the python interpreter build, which is performed when used PYTHON_SOURCE. Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
-	@echo "   make PYTHON_SOURCE=yes       Used along the deps target. Downloads the sources needed to build the python interpreter. Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
+	@echo "   make V=yes                   		Display full compiler messages. Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
+	@echo "   make DEBUG=yes               		Build with symbols and without optimization. Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
+	@echo "   make DEBUGAD=yes             		Enables extra debugging logging in wazuh-analysisd. Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
+	@echo "   make INSTALLDIR=/path        		Wazuh's installation path. Mandatory when compiling the python interpreter from sources using PYTHON_SOURCE."
+	@echo "   make ONEWAY=yes              		Disables manager's ACK towards agent. It allows connecting agents without backward connection from manager. Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
+	@echo "   make CLEANFULL=yes           		Makes the alert mailing subject clear in the format: '<location> - <level> - <description>'. Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
+	@echo "   make RESOURCES_URL           		Set the Wazuh resources URL"
+	@echo "   make EXTERNAL_SRC_ONLY=yes   		Combined with 'deps', it downloads only the external source code to be compiled as part of Wazuh building."
+	@echo "   make USE_ZEROMQ=yes          		Build with zeromq support. Allowed values are auto, 1, yes, YES, y and Y, otherwise, the flag is ignored"
+	@echo "   make USE_PRELUDE=yes         		Build with prelude support. Allowed values are auto, 1, yes, YES, y and Y, otherwise, the flag is ignored"
+	@echo "   make USE_INOTIFY=yes         		Build with inotify support. Allowed values are auto, 1, yes, YES, y and Y, otherwise, the flag is ignored"
+	@echo "   make USE_BIG_ENDIAN=yes      		Build with big endian support. Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
+	@echo "   make USE_SELINUX=yes         		Build with SELinux policies. Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
+	@echo "   make USE_AUDIT=yes           		Build with audit service support. Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
+	@echo "   make USE_MSGPACK_OPT=yes     		Use default architecture for building msgpack library. Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
+	@echo "   make DISABLE_JEMALLOC=yes    		Not to build the JEMalloc library. Allowed values are 1, yes, YES, y, and Y, otherwise, the flag is ignored"
+	@echo "   make OFLAGS=-Ox              		Overrides optimization level"
+	@echo "   make DISABLE_SYSC=yes        		Not to build the Syscollector module (for unsupported systems). Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
+	@echo "   make DISABLE_CISCAT=yes      		Not to build the CIS-CAT module (for unsupported systems). Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
+	@echo "   make DISABLE_STRIP_SYMBOLS=yes		Disable debug symbols stripping from binaries. Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
+	@echo "   make OPTIMIZE_CPYTHON=yes    		Enable this flag to optimize the python interpreter build, which is performed when used PYTHON_SOURCE. Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
+	@echo "   make PYTHON_SOURCE=yes       		Used along the deps target. Downloads the sources needed to build the python interpreter. Allowed values are 1, yes, YES, y and Y, otherwise, the flag is ignored"
 	@echo
 	@echo "Database options: "
-	@echo "   make DATABASE=mysql          Build with MYSQL Support"
-	@echo "                                Use MYSQL_CFLAGS adn MYSQL_LIBS to override defaults"
-	@echo "   make DATABASE=pgsql          Build with PostgreSQL Support "
-	@echo "                                Use PGSQL_CFLAGS adn PGSQL_LIBS to override defaults"
+	@echo "   make DATABASE=mysql          		Build with MYSQL Support"
+	@echo "                                		Use MYSQL_CFLAGS adn MYSQL_LIBS to override defaults"
+	@echo "   make DATABASE=pgsql          		Build with PostgreSQL Support "
+	@echo "                                		Use PGSQL_CFLAGS adn PGSQL_LIBS to override defaults"
 	@echo
 	@echo "Geoip support: "
-	@echo "   make USE_GEOIP=yes           Build with GeoIP support. Allowed values are auto 1, yes, YES, y and Y, otherwise, the flag is ignored"
+	@echo "   make USE_GEOIP=yes           		Build with GeoIP support. Allowed values are auto 1, yes, YES, y and Y, otherwise, the flag is ignored"
 	@echo
 	@echo "User options: "
-	@echo "   make WAZUH_GROUP=wazuh       Set wazuh group"
-	@echo "   make WAZUH_USER=wazuh        Set wazuh user"
+	@echo "   make WAZUH_GROUP=wazuh       		Set wazuh group"
+	@echo "   make WAZUH_USER=wazuh        		Set wazuh user"
 	@echo
 	@echo "Examples: Client with debugging enabled"
 	@echo "   make TARGET=agent DEBUG=yes"
@@ -614,43 +616,44 @@ help: failtarget
 settings:
 	@echo
 	@echo "General settings:"
-	@echo "    TARGET:             ${TARGET}"
-	@echo "    V:                  ${V}"
-	@echo "    DEBUG:              ${DEBUG}"
-	@echo "    DEBUGAD             ${DEBUGAD}"
-	@echo "    INSTALLDIR:         ${INSTALLDIR}"
-	@echo "    DATABASE:           ${DATABASE}"
-	@echo "    ONEWAY:             ${ONEWAY}"
-	@echo "    CLEANFULL:          ${CLEANFULL}"
-	@echo "    RESOURCES_URL:      ${RESOURCES_URL}"
-	@echo "    EXTERNAL_SRC_ONLY:  ${EXTERNAL_SRC_ONLY}"
+	@echo "    TARGET:             		${TARGET}"
+	@echo "    V:                  		${V}"
+	@echo "    DEBUG:              		${DEBUG}"
+	@echo "    DEBUGAD             		${DEBUGAD}"
+	@echo "    INSTALLDIR:         		${INSTALLDIR}"
+	@echo "    DATABASE:           		${DATABASE}"
+	@echo "    ONEWAY:             		${ONEWAY}"
+	@echo "    CLEANFULL:          		${CLEANFULL}"
+	@echo "    RESOURCES_URL:      		${RESOURCES_URL}"
+	@echo "    EXTERNAL_SRC_ONLY:  		${EXTERNAL_SRC_ONLY}"
 	@echo "User settings:"
-	@echo "    WAZUH_GROUP:        ${WAZUH_GROUP}"
-	@echo "    WAZUH_USER:         ${WAZUH_USER}"
+	@echo "    WAZUH_GROUP:        		${WAZUH_GROUP}"
+	@echo "    WAZUH_USER:         		${WAZUH_USER}"
 	@echo "USE settings:"
-	@echo "    USE_ZEROMQ:         ${USE_ZEROMQ}"
-	@echo "    USE_GEOIP:          ${USE_GEOIP}"
-	@echo "    USE_PRELUDE:        ${USE_PRELUDE}"
-	@echo "    USE_INOTIFY:        ${USE_INOTIFY}"
-	@echo "    USE_BIG_ENDIAN:     ${USE_BIG_ENDIAN}"
-	@echo "    USE_SELINUX:        ${USE_SELINUX}"
-	@echo "    USE_AUDIT:          ${USE_AUDIT}"
-	@echo "    DISABLE_SYSC:       ${DISABLE_SYSC}"
-	@echo "    DISABLE_CISCAT:     ${DISABLE_CISCAT}"
+	@echo "    USE_ZEROMQ:         		${USE_ZEROMQ}"
+	@echo "    USE_GEOIP:          		${USE_GEOIP}"
+	@echo "    USE_PRELUDE:        		${USE_PRELUDE}"
+	@echo "    USE_INOTIFY:        		${USE_INOTIFY}"
+	@echo "    USE_BIG_ENDIAN:     		${USE_BIG_ENDIAN}"
+	@echo "    USE_SELINUX:        		${USE_SELINUX}"
+	@echo "    USE_AUDIT:          		${USE_AUDIT}"
+	@echo "    DISABLE_SYSC:       		${DISABLE_SYSC}"
+	@echo "    DISABLE_CISCAT:     		${DISABLE_CISCAT}"
+	@echo "    DISABLE_STRIP_SYMBOLS:	${DISABLE_STRIP_SYMBOLS}"
 	@echo "Mysql settings:"
-	@echo "    includes:           ${MI}"
-	@echo "    libs:               ${ML}"
+	@echo "    includes:           		${MI}"
+	@echo "    libs:               		${ML}"
 	@echo "Pgsql settings:"
-	@echo "    includes:           ${PI}"
-	@echo "    libs:               ${PL}"
+	@echo "    includes:           		${PI}"
+	@echo "    libs:               		${PL}"
 	@echo "Defines:"
 	@echo "    ${DEFINES}"
 	@echo "Compiler:"
-	@echo "    CFLAGS            ${OSSEC_CFLAGS}"
-	@echo "    LDFLAGS           ${OSSEC_LDFLAGS}"
-	@echo "    LIBS              ${OSSEC_LIBS}"
-	@echo "    CC                ${CC}"
-	@echo "    MAKE              ${MAKE}"
+	@echo "    CFLAGS            		${OSSEC_CFLAGS}"
+	@echo "    LDFLAGS           		${OSSEC_LDFLAGS}"
+	@echo "    LIBS              		${OSSEC_LIBS}"
+	@echo "    CC                		${CC}"
+	@echo "    MAKE              		${MAKE}"
 
 BUILD_SERVER+=wazuh-maild -
 BUILD_SERVER+=wazuh-csyslogd -
