--- a/api/api/spec/spec.yaml
+++ b/api/api/spec/spec.yaml
@@ -7679,7 +7679,7 @@ paths:
         - $ref: '#/components/parameters/wait_for_complete'
       responses:
         '200':
-          description: "Get summary of agents connection and configuration statuses"
+          description: "Get summary of agents connection and group configuration statuses"
           content:
             application/json:
               schema:
