Add groups configuration synchronization status to `GET /agents/summary/status` API endpoint (#12498)
* Add configuration status to get_agents_summary_status response

* Update GET /agents/summary/status API integration endpoint tests

* Update spec description for GET /agents/summary/status

* Update unittests after adding configuration status to get_agents_summary_status output

* Add minor changes to API spec

* Minor change in get_agents_summary_status SDK function

* Add minor changes to AgentSummaryStatus spec structure

* Add minor change to white_all API integration test

* Remove duplicated column group_config_status from testing SQL schemas

* Add requested changes to spec and agent unit test

--- a/api/api/spec/spec.yaml
+++ b/api/api/spec/spec.yaml
@@ -1458,21 +1458,36 @@ components:
     AgentsSummaryStatus:
       type: object
       properties:
-        total:
-          type: integer
-          format: int32
-        active:
-          type: integer
-          format: int32
-        disconnected:
-          type: integer
-          format: int32
-        never_connected:
-          type: integer
-          format: int32
-        pending:
-          type: integer
-          format: int32
+        connection:
+          type: object
+          properties:
+            total:
+              type: integer
+              format: int32
+            active:
+              type: integer
+              format: int32
+            disconnected:
+              type: integer
+              format: int32
+            never_connected:
+              type: integer
+              format: int32
+            pending:
+              type: integer
+              format: int32
+        configuration:
+          type: object
+          properties:
+            total:
+              type: integer
+              format: int32
+            synced:
+              type: integer
+              format: int32
+            not_synced:
+              type: integer
+              format: int32
 
     AgentDistinct:
       allOf:
@@ -7655,7 +7670,7 @@ paths:
       tags:
         - Agents
       summary: "Summarize agents status"
-      description: "Return a summary of the status of available agents"
+      description: "Return a summary of the connection and groups configuration synchronization statuses of available agents"
       operationId: api.controllers.agent_controller.get_agent_summary_status
       x-rbac-actions:
         - $ref: '#/x-rbac-catalog/actions/agent:read'
@@ -7664,7 +7679,7 @@ paths:
         - $ref: '#/components/parameters/wait_for_complete'
       responses:
         '200':
-          description: "Get summary of agents"
+          description: "Get summary of agents connection and group configuration statuses"
           content:
             application/json:
               schema:
@@ -7676,11 +7691,16 @@ paths:
                       $ref: '#/components/schemas/AgentsSummaryStatus'
               example:
                 data:
-                  active: 8
-                  disconnected: 0
-                  never_connected: 3
-                  pending: 0
-                  total: 11
+                  connection:
+                    active: 8
+                    disconnected: 0
+                    never_connected: 3
+                    pending: 0
+                    total: 11
+                  configuration:
+                    synced: 8
+                    not_synced: 3
+                    total: 11
                 error: 0
         '400':
           $ref: '#/components/responses/ResponseError'
